--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Giphy Hero</title>
-    <link rel="stylesheet" type="text/css" href="/Users/leifaesoph/Desktop/Giphy/Untitled-2.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
